@@ -1,0 +1,101 @@
+/* Please keep this file sorted alphabetically (according to current
+ *  Locale in use) */
+ENTITY(198,"AElig")
+ENTITY(193,"Aacute")
+ENTITY(194,"Acirc")
+ENTITY(192,"Agrave")
+ENTITY(197,"Aring")
+ENTITY(195,"Atilde")
+ENTITY(196,"Auml")
+ENTITY(199,"Ccedil")
+ENTITY(208,"ETH")
+ENTITY(201,"Eacute")
+ENTITY(202,"Ecirc")
+ENTITY(200,"Egrave")
+ENTITY(203,"Euml")
+ENTITY(205,"Iacute")
+ENTITY(206,"Icirc")
+ENTITY(204,"Igrave")
+ENTITY(207,"Iuml")
+ENTITY(209,"Ntilde")
+ENTITY(211,"Oacute")
+ENTITY(212,"Ocirc")
+ENTITY(210,"Ograve")
+ENTITY(216,"Oslash")
+ENTITY(213,"Otilde")
+ENTITY(214,"Ouml")
+ENTITY(222,"THORN")
+ENTITY(218,"Uacute")
+ENTITY(219,"Ucirc")
+ENTITY(217,"Ugrave")
+ENTITY(220,"Uuml")
+ENTITY(221,"Yacute")
+ENTITY(225,"aacute")
+ENTITY(226,"acirc")
+ENTITY(180,"acute")
+ENTITY(230,"aelig")
+ENTITY(224,"agrave")
+ENTITY(38, "amp")
+ENTITY(229,"aring")
+ENTITY(227,"atilde")
+ENTITY(228,"auml")
+ENTITY(166,"brvbar")
+ENTITY(231,"ccedil")
+ENTITY(184,"cedil")
+ENTITY(162,"cent")
+ENTITY(169,"copy")
+ENTITY(164,"curren")
+ENTITY(176,"deg")
+ENTITY(247,"divide")
+ENTITY(233,"eacute")
+ENTITY(234,"ecirc")
+ENTITY(232,"egrave")
+ENTITY(240,"eth")
+ENTITY(235,"euml")
+ENTITY(189,"frac12")
+ENTITY(188,"frac14")
+ENTITY(190,"frac34")
+ENTITY(62, "gt")
+ENTITY(237,"iacute")
+ENTITY(238,"icirc")
+ENTITY(161,"iexcl")
+ENTITY(236,"igrave")
+ENTITY(191,"iquest")
+ENTITY(239,"iuml")
+ENTITY(171,"laquo")
+ENTITY(60, "lt")
+ENTITY(175,"macr")
+ENTITY(181,"micro")
+ENTITY(183,"middot")
+ENTITY(160,"nbsp")
+ENTITY(172,"not")
+ENTITY(241,"ntilde")
+ENTITY(243,"oacute")
+ENTITY(244,"ocirc")
+ENTITY(242,"ograve")
+ENTITY(170,"ordf")
+ENTITY(186,"ordm")
+ENTITY(248,"oslash")
+ENTITY(245,"otilde")
+ENTITY(246,"ouml")
+ENTITY(182,"para")
+ENTITY(177,"plusmn")
+ENTITY(163,"pound")
+ENTITY(34, "quot")
+ENTITY(187,"raquo")
+ENTITY(174,"reg")
+ENTITY(167,"sect")
+ENTITY(173,"shy")
+ENTITY(185,"sup1")
+ENTITY(178,"sup2")
+ENTITY(179,"sup3")
+ENTITY(223,"szlig")
+ENTITY(254,"thorn")
+ENTITY(215,"times")
+ENTITY(250,"uacute")
+ENTITY(251,"ucirc")
+ENTITY(249,"ugrave")
+ENTITY(168,"uml")
+ENTITY(252,"uuml")
+ENTITY(253,"yacute")
+ENTITY(165,"yen")
